250812 12:03 김태현 뉴스 드래그 작업중

--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -1,3 +1,4 @@
+/* news.css */
 /* 전체 내용 */
 * {
   margin: 0;
@@ -86,7 +87,7 @@ main {
 
 /* 슬라이드 베너 랩 */
 .slides_wrap {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 800px;
   height: 300px;
   position: relative;
@@ -103,6 +104,7 @@ main {
   padding: 0;
   position: absolute;
   left: 0;
+  overflow: hidden;
 }
 
 /* 카드 뉴스 */
@@ -112,10 +114,7 @@ main {
   background-color: #FFF8EF;
 }
 
-/* ul의 li에서 2~5 까지 베너 */
-.slides>li:nth-child(2)>.card,
-.slides>li:nth-child(3)>.card,
-.slides>li:nth-child(4)>.card,
-.slides>li:last-child>.card {
-  display: none;
+
+.cardlist{
+  border: 1px solid black;
 }
