--- a/webapp/assets/css/myPageNormal/normalReferenceUp.css
+++ b/webapp/assets/css/myPageNormal/normalReferenceUp.css
@@ -166,7 +166,8 @@ main {
 }
 
 .modal_box {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
   text-align: center;
   padding: 30px;
   border-radius: 30px;
@@ -185,6 +186,8 @@ main {
   padding: 8px 20px;
   cursor: pointer;
   border-radius: 15px;
+  background-color: #2F52AA;
+  color: white;
 }
 
 #confirmDelete {
