--- a/webapp/assets/css/myPageNormal/normalPost.css
+++ b/webapp/assets/css/myPageNormal/normalPost.css
@@ -50,24 +50,9 @@ form {
   width: 100%;
 }
 
-.div_choose {
-  width: 500px;
-}
-
-.div_choose ul {
-  display: flex;
-  list-style-type: none;
-  padding: 50px 0px 0px 150px;
-}
-
-.div_choose ul li {
-  margin: 10px;
-  text-decoration: underline;
-}
-
 .mark_nav {
   display: flex;
-  margin: 0px 150px;
+  margin: 0px 150px 0px 150px;
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
@@ -76,13 +61,16 @@ form {
 }
 
 .mark_nav ul {
+  width: 100%;
   display: flex;
+  justify-content: space-between
 }
 
 .mark_nav ul li {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(191, 201, 201);
 }
 
 .mark_nav input {
@@ -91,17 +79,21 @@ form {
   height: 30px;
 }
 
+.name_col div,
 .name div {
   width: 100px;
   text-align: center;
 }
 
-.posttitle div {
-  width: 900px;
+.location_col div,
+.location div {
+  width: 1000px;
   text-align: center;
+  background-color: rgb(191, 201, 201);
 }
 
-.day div {
+.phone_col div,
+.phone div {
   width: 200px;
   text-align: center;
 }
@@ -109,28 +101,77 @@ form {
 .mark_list {
   display: flex;
   margin: 0px 150px;
-  height: 50px;
-  align-items: center;
   background-color: rgb(255, 255, 255);
-  border-bottom: 1px solid black;
+  flex-direction: column;
+  height: 400px;
 }
 
-.mark_list ul {
+.mark_list li {
   display: flex;
-}
-
-.mark_list ul li {
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  height: 50px;
+  background-color: rgb(214, 236, 236);
+  border-bottom: 1px solid black;
+
 }
 
-.mark_list input {
+.mark_list li input,
+.mark_list li div,
+.mark_list li a {
+  background-color: rgb(214, 236, 236);
+}
+
+.checkbox_li {
   margin: 0px 30px;
   width: 30px;
   height: 30px;
 }
 
+.page {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+}
+
+.page li {
+  margin: 10px;
+  font-size: 20px;
+  background-color: rgb(255, 255, 255);
+}
+
+.div_delete {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  margin: 10px;
+  background-color: red;
+  color: white;
+  width: 80px;
+  height: 40px;
+  border-radius: 15px;
+
+}
+
+
+.div_choose {
+  width: 500px;
+}
+
+.div_choose ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0px 0px 0px 150px;
+}
+
+.div_choose ul li {
+  margin: 10px;
+  text-decoration: underline;
+}
 .page {
   display: flex;
   justify-content: center;
@@ -156,7 +197,6 @@ button {
   color: white;
   width: 80px;
   height: 40px;
-  margin-left: 150px;
   border-radius: 15px;
   border: 0px;
 }
