--- a/webapp/assets/css/myPageNormal/normalsendMesseage.css
+++ b/webapp/assets/css/myPageNormal/normalsendMesseage.css
@@ -49,6 +49,93 @@ main {
 form {
   width: 100%;
 }
+.send{
+  border-bottom: 1px solid black;
+  font-weight: bold;
+}
+
+.mark_nav {
+  display: flex;
+  margin: 0px 150px 0px 150px;
+  height: 50px;
+  align-items: center;
+  background-color: rgb(191, 201, 201);
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.mark_nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-between
+}
+
+.mark_nav ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(191, 201, 201);
+}
+
+.mark_nav input {
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
+}
+
+.name_col div,
+.name div {
+  width: 100px;
+  text-align: center;
+}
+
+.location_col div,
+.location div {
+  width: 700px;
+  text-align: center;
+  background-color: rgb(191, 201, 201);
+}
+
+.phone_col div,
+.phone div {
+  width: 200px;
+  text-align: center;
+}
+.read_col div,
+.read div {
+  width: 100px;
+  text-align: center;
+}
+
+.mark_list {
+  display: flex;
+  margin: 0px 150px;
+  background-color: rgb(255, 255, 255);
+  flex-direction: column;
+  height: 400px;
+}
+
+.mark_list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  background-color: rgb(214, 236, 236);
+  border-bottom: 1px solid black;
+
+}
+
+.mark_list li input,
+.mark_list li div,
+.mark_list li a {
+  background-color: rgb(214, 236, 236);
+}
+
+.checkbox_li {
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
+}
 
 .div_choose{
   width: 500px;
@@ -60,83 +147,6 @@ form {
 }
 .div_choose ul li{
   margin: 10px;
-}
-.send a{
-  font-weight: bold;
-  text-decoration: underline;
-}
-.mark_nav {
-  display: flex;
-  margin:  0px 150px;
-  height: 50px;
-  align-items: center;
-  background-color: rgb(191, 201, 201);
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-.mark_nav ul {
-  display: flex;
-}
-
-.mark_nav ul li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.mark_nav input {
-  margin: 0px 30px;
-  width: 30px;
-  height: 30px;
-}
-
-.mark_list {
-  display: flex;
-  margin: 0px 150px;
-  height: 50px;
-  align-items: center;
-  background-color: rgb(215, 238, 238);
-  border-bottom: 1px solid black;
-}
-
-.mark_list ul {
-  display: flex;
-}
-
-.mark_list ul li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.mark_list input {
-  margin: 0px 30px;
-  width: 30px;
-  height: 30px;
-}
-
-.name div {
-  width: 100px;
-  text-align: center;
-}
-
-.messeagetitle div {
-  width: 800px;
-  text-align: center;
-}
-#headline{
-  cursor: pointer;
-}
-
-.day div {
-  width: 200px;
-  text-align: center;
-}
-
-.read div {
-  width: 200px;
-  text-align: center;
 }
 
 .page {
