--- a/webapp/assets/css/subwayLine/dongjack.css
+++ b/webapp/assets/css/subwayLine/dongjack.css
@@ -121,3 +121,12 @@ main {
     display: flex;
   align-items: center;
 }
+
+button {
+  margin-top: 5px;
+  width: 100px;
+  height: 60px;
+  border-radius: 15px;
+  cursor: pointer;
+  border: 2px solid black;
+}
