250812 1727 황승우 관리자 css 수정

--- a/webapp/assets/css/admin/sidebar.css
+++ b/webapp/assets/css/admin/sidebar.css
@@ -30,12 +30,12 @@
   justify-content: center;
 }
 
-ul>li:hover {
+ul>.side_attach:hover {
   background-color: #2f52aa;
   opacity: 0.5;
 }
 
-ul>div>li:hover {
+ul>div>.side_attach:hover {
   background-color: #2f52aa;
   opacity: 0.5;
 }
