--- a/webapp/assets/css/admin/notice.css
+++ b/webapp/assets/css/admin/notice.css
@@ -62,28 +62,33 @@ main {
 }
 
 .board_number {
-  width: 80px;
+  width: 10%;
   height: 95%;
 }
 .board_title {
-  width: 300px;
+  width: 30%;
   height: 95%;
 }
 .board_name {
-  width: 300px;
+  width: 30%;
   height: 95%;
 }
 .board_cnt {
-  width: 100px;
+  width: 10%;
   height: 95%;
 }
 .board_date {
-  width: 200px;
+  width: 20%;
   height: 95%;
 }
-.board_type {
-  width: 150px;
-  height: 95%;
+
+
+.table_big {
+  width:90%;
+}
+
+.table_body {
+  border-bottom: 1px solid black;
 }
 
 .table_body {
@@ -98,13 +103,16 @@ main {
     border: 1px solid black;
   } */
 
+
+
+
 .body_number {
-  width: 80px;
+  width: 10%;
   height: 30px;
   /* border: 1px solid black; */
 }
 .body_content {
-  width: 300px;
+   width: 30%;
   height: 30px;
   /* border: 1px solid black; */
 }
@@ -148,7 +156,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid black;
+  
 }
 
 .paging_box {
