--- a/webapp/assets/css/admin/notice.css
+++ b/webapp/assets/css/admin/notice.css
@@ -117,27 +117,24 @@ main {
   /* border: 1px solid black; */
 }
 .body_name {
-  width: 300px;
-  height: 30px;
-  /* border: 1px solid black; */
-}
-.body_type {
-  width: 124px;
+  width: 30%;
   height: 30px;
   /* border: 1px solid black; */
 }
 
+
 .body_cnt {
-  width: 100px;
+  width: 10%;
   height: 30px;
   /* border: 1px solid black; */
 }
 .body_date {
-  width: 200px;
+  width: 20%;
   height: 30px;
   /* border: 1px solid black; */
 }
 .body_delete {
+  position: relative;
   width: 50px;
   height: 30px;
   /* border: 1px solid black; */
