250812 23:20 이재빈 게시판 js중

--- a/webapp/assets/css/myPageNormal/normalMark.css
+++ b/webapp/assets/css/myPageNormal/normalMark.css
@@ -34,6 +34,9 @@ main {
   padding: 12px 20px;
 }
 
+.main_sidebar ul li a {
+  color: white;
+}
 /* ============================= */
 .div_mark {
   flex: 1;
