--- a/webapp/assets/css/myPageNormal/normalPwCheck.css
+++ b/webapp/assets/css/myPageNormal/normalPwCheck.css
@@ -33,7 +33,9 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
-
+.main_sidebar ul li a {
+  color: white;
+}
 /* ============================= */
 
 .pw_check{
